2008-04-15 Juan Pablo Santos <juanpablo.santos@gmail.com>

        * 2.7.0-svn-13
        
        * [JSPWIKI-178] Patch from Jorge Ferrer to keep the order of search (WEB-INF
        then classpath then file system) of filters.xml
        
        * [JSPWIKI-231] Updated es translation and applied patches from Florian 
        Holeczek (de translation) and Harry Metske (nl translation)

2008-04-13  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-12
        
        * [JSPWIKI-10] Patch from Harry Metske to make sure 
        VersioningFileProvider and AbstractFileProvider check for
        proper permissions.

2008-04-12  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-11
        
        * Improved restart time at the expense of more disk being
        used and the first startup taking a bit longer.
        
        * Acl implementation, permissions and our Principals now
        implement Serializable.  It could be used to improve startup
        time even further, but it will be useful for the future.
        
2007-04-10  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-10 - Javascript fixes for IE
        
        * [JSPWIKI-235] Bugfixes for Section edit handling in IE
        
        * Bugfixes for hide/show Favorites menu on mouse-click/hover.
        

2007-04-09  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-9
        
        * [JSPWIKI-233] Bugfix PreferencesTab.jsp

        * [JSPWIKI-232] Localization of (All) in the Edit Section dropdown.
        Also added localization to the language dropdown

        * [JSPWIKI-234] Added IS8601 date/time pattern to default prefs in JSPWiki.properties

        * Bugfix IE javascript crash on mouse-over handler

2008-04-09  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-8
        
        * [JSPWIKI-115]: Refactored VariableManager to use Reflection.
        Thanks to Stephen Solka.
        